--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,5 +2,5 @@ name: NoJoinQuit
 version: '1.0'
 main: me.dennis.nojoinquit.NoJoinQuit
 api-version: '1.21'
-author: Dennis
+author: AnonLaLaNI
 description: Removes join and quit messages.
